// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`captures tokens 1`] = `
"new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(event) {
    console.log(this.str, this.num, this.list);
  }
};
})())({
str: JSON.parse(process.env["WING_TOKEN_HTTPS_TFTOKEN_TOKEN_8_EXECUTE_API_TFTOKEN_TOKEN_0_AMAZONAWS_COM_TFTOKEN_TOKEN_9"]),
num: JSON.parse(process.env["WING_TOKEN_8_109562212591388E_298"]),
list: JSON.parse(process.env["WING_TOKEN_TFTOKEN_TOKEN_11"])
})"
`;

exports[`captures tokens 2`] = `
{
  "data": {
    "aws_caller_identity": {
      "account": {},
    },
    "aws_region": {
      "Region": {},
    },
  },
  "output": {
    "Api_Endpoint_Url_473FEE9F": {
      "value": "https://\${aws_api_gateway_rest_api.Api_api_91C07D84.id}.execute-api.\${data.aws_region.Region.name}.amazonaws.com/\${aws_api_gateway_stage.Api_api_stage_E0FA39D6.stage_name}",
    },
  },
  "resource": {
    "aws_api_gateway_deployment": {
      "Api_api_deployment_7FB64CC4": {
        "lifecycle": {
          "create_before_destroy": true,
        },
        "rest_api_id": "\${aws_api_gateway_rest_api.Api_api_91C07D84.id}",
        "triggers": {
          "redeployment": "\${sha256(aws_api_gateway_rest_api.Api_api_91C07D84.body)}",
        },
      },
    },
    "aws_api_gateway_rest_api": {
      "Api_api_91C07D84": {
        "body": "{"paths":{"/":{"get":{"operationId":"get","responses":{"200":{"description":"200 response","content":{}}},"parameters":[],"x-amazon-apigateway-integration":{"uri":"arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/arn:aws:lambda:\${data.aws_region.Region.name}:\${data.aws_caller_identity.account.account_id}:function:get_0-c86d29bb/invocations","type":"aws_proxy","httpMethod":"POST","responses":{"default":{"statusCode":"200"}},"passthroughBehavior":"when_no_match","contentHandling":"CONVERT_TO_TEXT"}}},"/{proxy+}":{"x-amazon-apigateway-any-method":{"produces":["application/json"],"x-amazon-apigateway-integration":{"type":"mock","requestTemplates":{"application/json":"\\n                {\\"statusCode\\": 404}\\n              "},"passthroughBehavior":"never","responses":{"404":{"statusCode":"404","responseParameters":{"method.response.header.Content-Type":"'application/json'"},"responseTemplates":{"application/json":"{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}"}},"default":{"statusCode":"404","responseParameters":{"method.response.header.Content-Type":"'application/json'"},"responseTemplates":{"application/json":"{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}"}}}},"responses":{"404":{"description":"404 response","headers":{"Content-Type":{"type":"string"}}}}}}},"openapi":"3.0.3"}",
        "lifecycle": {
          "create_before_destroy": true,
        },
        "name": "api-c8f613f0",
      },
    },
    "aws_api_gateway_stage": {
      "Api_api_stage_E0FA39D6": {
        "deployment_id": "\${aws_api_gateway_deployment.Api_api_deployment_7FB64CC4.id}",
        "rest_api_id": "\${aws_api_gateway_rest_api.Api_api_91C07D84.id}",
        "stage_name": "prod",
      },
    },
    "aws_cloudwatch_log_group": {
      "Api_get_0_CloudwatchLogGroup_196DE719": {
        "name": "/aws/lambda/get_0-c86d29bb",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "Api_get_0_IamRole_2FAC475D": {
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
      },
    },
    "aws_iam_role_policy": {
      "Api_get_0_IamRolePolicy_D9FB373B": {
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"none:null","Resource":"*"}]}",
        "role": "\${aws_iam_role.Api_get_0_IamRole_2FAC475D.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "Api_get_0_IamRolePolicyAttachment_AEF1DC01": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.Api_get_0_IamRole_2FAC475D.name}",
      },
    },
    "aws_lambda_function": {
      "Api_get_0_244A7BA4": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "get_0-c86d29bb",
            "WING_TOKEN_8_109562212591388E_298": "\${jsonencode(var.Number)}",
            "WING_TOKEN_HTTPS_TFTOKEN_TOKEN_8_EXECUTE_API_TFTOKEN_TOKEN_0_AMAZONAWS_COM_TFTOKEN_TOKEN_9": "\${jsonencode("https://\${aws_api_gateway_rest_api.Api_api_91C07D84.id}.execute-api.\${data.aws_region.Region.name}.amazonaws.com/\${aws_api_gateway_stage.Api_api_stage_E0FA39D6.stage_name}")}",
            "WING_TOKEN_TFTOKEN_TOKEN_11": "\${jsonencode(var.List)}",
          },
        },
        "function_name": "get_0-c86d29bb",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.Api_get_0_IamRole_2FAC475D.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.Api_get_0_S3Object_D1844823.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_lambda_permission": {
      "Api_api_permission-GET-c2e3ffa8_5BF93889": {
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.Api_get_0_244A7BA4.function_name}",
        "principal": "apigateway.amazonaws.com",
        "source_arn": "\${aws_api_gateway_rest_api.Api_api_91C07D84.execution_arn}/*/GET/",
        "statement_id": "AllowExecutionFromAPIGateway-GET-c2e3ffa8",
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
    },
    "aws_s3_object": {
      "Api_get_0_S3Object_D1844823": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
  },
  "variable": {
    "List": {
      "default": [
        1,
        2,
        3,
      ],
      "type": "List<Number>",
    },
    "Number": {
      "default": 123,
      "type": "Number",
    },
  },
}
`;

exports[`captures tokens inside plain objects 1`] = `
"new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(event) {
    console.log(this.foo.str, this.foo.num);
  }
};
})())({
foo: {"str": JSON.parse(process.env["WING_TOKEN_HTTPS_TFTOKEN_TOKEN_38_EXECUTE_API_TFTOKEN_TOKEN_30_AMAZONAWS_COM_TFTOKEN_TOKEN_39"]),"num": JSON.parse(process.env["WING_TOKEN_8_109562212591416E_298"]),}
})"
`;

exports[`captures tokens inside plain objects 2`] = `
{
  "data": {
    "aws_caller_identity": {
      "account": {},
    },
    "aws_region": {
      "Region": {},
    },
  },
  "output": {
    "Api_Endpoint_Url_473FEE9F": {
      "value": "https://\${aws_api_gateway_rest_api.Api_api_91C07D84.id}.execute-api.\${data.aws_region.Region.name}.amazonaws.com/\${aws_api_gateway_stage.Api_api_stage_E0FA39D6.stage_name}",
    },
  },
  "resource": {
    "aws_api_gateway_deployment": {
      "Api_api_deployment_7FB64CC4": {
        "lifecycle": {
          "create_before_destroy": true,
        },
        "rest_api_id": "\${aws_api_gateway_rest_api.Api_api_91C07D84.id}",
        "triggers": {
          "redeployment": "\${sha256(aws_api_gateway_rest_api.Api_api_91C07D84.body)}",
        },
      },
    },
    "aws_api_gateway_rest_api": {
      "Api_api_91C07D84": {
        "body": "{"paths":{"/":{"get":{"operationId":"get","responses":{"200":{"description":"200 response","content":{}}},"parameters":[],"x-amazon-apigateway-integration":{"uri":"arn:aws:apigateway:\${data.aws_region.Region.name}:lambda:path/2015-03-31/functions/arn:aws:lambda:\${data.aws_region.Region.name}:\${data.aws_caller_identity.account.account_id}:function:get_0-c86d29bb/invocations","type":"aws_proxy","httpMethod":"POST","responses":{"default":{"statusCode":"200"}},"passthroughBehavior":"when_no_match","contentHandling":"CONVERT_TO_TEXT"}}},"/{proxy+}":{"x-amazon-apigateway-any-method":{"produces":["application/json"],"x-amazon-apigateway-integration":{"type":"mock","requestTemplates":{"application/json":"\\n                {\\"statusCode\\": 404}\\n              "},"passthroughBehavior":"never","responses":{"404":{"statusCode":"404","responseParameters":{"method.response.header.Content-Type":"'application/json'"},"responseTemplates":{"application/json":"{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}"}},"default":{"statusCode":"404","responseParameters":{"method.response.header.Content-Type":"'application/json'"},"responseTemplates":{"application/json":"{\\"statusCode\\": 404, \\"message\\": \\"Error: Resource not found\\"}"}}}},"responses":{"404":{"description":"404 response","headers":{"Content-Type":{"type":"string"}}}}}}},"openapi":"3.0.3"}",
        "lifecycle": {
          "create_before_destroy": true,
        },
        "name": "api-c8f613f0",
      },
    },
    "aws_api_gateway_stage": {
      "Api_api_stage_E0FA39D6": {
        "deployment_id": "\${aws_api_gateway_deployment.Api_api_deployment_7FB64CC4.id}",
        "rest_api_id": "\${aws_api_gateway_rest_api.Api_api_91C07D84.id}",
        "stage_name": "prod",
      },
    },
    "aws_cloudwatch_log_group": {
      "Api_get_0_CloudwatchLogGroup_196DE719": {
        "name": "/aws/lambda/get_0-c86d29bb",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "Api_get_0_IamRole_2FAC475D": {
        "assume_role_policy": "{"Version":"2012-10-17","Statement":[{"Action":"sts:AssumeRole","Principal":{"Service":"lambda.amazonaws.com"},"Effect":"Allow"}]}",
      },
    },
    "aws_iam_role_policy": {
      "Api_get_0_IamRolePolicy_D9FB373B": {
        "policy": "{"Version":"2012-10-17","Statement":[{"Effect":"Allow","Action":"none:null","Resource":"*"}]}",
        "role": "\${aws_iam_role.Api_get_0_IamRole_2FAC475D.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "Api_get_0_IamRolePolicyAttachment_AEF1DC01": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.Api_get_0_IamRole_2FAC475D.name}",
      },
    },
    "aws_lambda_function": {
      "Api_get_0_244A7BA4": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "get_0-c86d29bb",
            "WING_TOKEN_8_109562212591416E_298": "\${jsonencode(var.Number)}",
            "WING_TOKEN_HTTPS_TFTOKEN_TOKEN_38_EXECUTE_API_TFTOKEN_TOKEN_30_AMAZONAWS_COM_TFTOKEN_TOKEN_39": "\${jsonencode("https://\${aws_api_gateway_rest_api.Api_api_91C07D84.id}.execute-api.\${data.aws_region.Region.name}.amazonaws.com/\${aws_api_gateway_stage.Api_api_stage_E0FA39D6.stage_name}")}",
          },
        },
        "function_name": "get_0-c86d29bb",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.Api_get_0_IamRole_2FAC475D.arn}",
        "runtime": "nodejs20.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.Api_get_0_S3Object_D1844823.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_lambda_permission": {
      "Api_api_permission-GET-c2e3ffa8_5BF93889": {
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.Api_get_0_244A7BA4.function_name}",
        "principal": "apigateway.amazonaws.com",
        "source_arn": "\${aws_api_gateway_rest_api.Api_api_91C07D84.execution_arn}/*/GET/",
        "statement_id": "AllowExecutionFromAPIGateway-GET-c2e3ffa8",
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
    },
    "aws_s3_object": {
      "Api_get_0_S3Object_D1844823": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
  },
  "variable": {
    "Number": {
      "default": 123,
      "type": "Number",
    },
  },
}
`;
